MD-2004-02-18-0: Bugfix:    - cleanup during execd uninst
                            - if spooldir exists -> ask for deleting
                            - testsuite adaption
                 Changed:   inst_sgeee, testsuite

CR-2004-02-18-1: Bugfix:    - qevent will not immediately try to re-register on
                            event client timeout
                            - 2nd started scheduler will exit
                            - communication errors and event client timeout is
                            are now handled when event client wants to get 
                            events ( function: ec_get() )
                 Changed:   event clients ( sge_schedd, qevent, qsub, japi lib)
                 Review:    pending

DT-2004-02-18-4: Bugfix:    Revamped JAPI signal handling to be more POSIX
                            friendly and less dangerous.
                            Reworked JAPI event client thread so that it doesn't
                            hang the process whenever something goes wrong.
                            JAPI now shares one comm lib connection between the
                            main thread and the event client thread.
                 Changed:   JAPI
                 Review:    pending

AD-2004-02-18-1: Cleanup:   Did remove *currently* dispensable mutex
                            attributes. Did add some additional commentaries.
                 Changed:   qmaster

SG-2004-01-18-3: Bugfix:    - fixed qmaster crash in case of "qhold all"
                            - removed -uall switch from qalter
                            - removed "all" flag from qalter. "all" is a job
                              name now.
                            - adjusted the qhost help output  
                 Changed:   qmaster, qalter, qhost
                 Review:    MD
                 Issue:     670

DT-2004-02-18-3: Bugfix:    Moved basic sharetree functionality out of libsched